# Aether-Engine

./: Aether Engine.sln  meson.build
Aether Engine/: Aether Engine.vcxproj  Aether Engine.vcxproj.filters
Aether Engine/src/Core/: Enums.h
Aether Engine/src/Engine/: Engine.cpp  Engine.h
Aether Engine/src/Engine/Core/: Collision.h  Enums.h  Input.cpp  Input.h  Math.h  Vector2.h
Aether Engine/src/Engine/Entities/: Entity.cpp  Entity.h
Aether Engine/src/Engine/Graphics/: Animation.cpp  Animation.h  Renderer.cpp  Renderer.h  Text.cpp  (+1 more)
Aether Engine/src/Entities/: Entity.cpp  Entity.h
Aether Engine/src/Game/: Game.cpp  Game.h  Menu.cpp  Menu.h  Scene.cpp  Scene.h
Aether Engine/src/Graphics/: Renderer.cpp  Renderer.h
Aether Engine/src/Structure/: Game.cpp  main.cpp
Aether Engine/src/Utils/: Animation.cpp  Animation.h
Aether Engine/x64/Debug/: Aether Engine.exe.recipe  Aether Engine.vcxproj.FileListAbsolute.txt  vc143.idb
src/: main.cpp  meson.build
src/Engine/: Collision.cpp  Collision.h  Engine.cpp  Engine.h  Enums.h  Input.cpp  Input.h  meson.build
src/Engine/Audio/: DJ.cpp  DJ.h  SoundBoard.cpp  SoundBoard.h  meson.build
src/Engine/Graphics/: Font.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Text.h  TileMap.cpp  TileMap.h  Window.h  meson.build
src/Engine/Math/: Math.cpp  Math.h  Vec2.h  meson.build
src/Entities/: Entity.cpp  Entity.h  Portal.h  meson.build
src/Entities/UI/: Button.cpp  Button.h  Picker.cpp  Picker.h  Slider.cpp  Slider.h  Toggle.cpp  Toggle.h  UI.cpp  UI.h  meson.build
src/Game/: Game.cpp  Game.h  Menu.cpp  Menu.h
(+21 files in other folders)
